crates/htui/tests/snapshots/prompt_settings__editor_fraction.snap
---
source: crates/htui/tests/prompt_settings.rs
expression: frame
---
app
  excerpt_file_line_cap         unset | 400 (app_setting_default)   lines
  excerpt_head_lines            unset | 200 (app_setting_default)   lines
  excerpt_max_file_bytes        unset | 524288 (app_setting_default)   bytes
  excerpt_max_files             unset | 12 (app_setting_default)   files
  excerpt_max_scan_files        unset | 20000 (app_setting_default)   files
  excerpt_provider_deadline_ms  unset | 1500 (app_setting_default)   ms
  max_skill_tokens              unset | 20000 (app_setting_default)   tokens
  prompt_reserve_fraction       0.1 | 0.1 (1000 bp) (app_setting)   bp
  prompt_upstream_hops          unset | 2 (app_setting_default)   hops
  token_budget                  unset | 120000 (app_setting_default)   tokens
project Vulkan Tutorials
  box_hostname                  unset | on (default)   on/off
  prompt_upstream_hops          unset | 2 (app_setting_default)   hops
  token_budget                  120000 | 120000 (project)   tokens











Share of the budget held back for the answer, 0.0 to 0.5.
range 0..=5000 bp · rungs app
prompt_reserve_fraction: 0.1
Enter save · Esc cancel · empty clears
