crates/htui/tests/snapshots/prompt_settings__offline.snap
---
source: crates/htui/tests/prompt_settings.rs
expression: frame
---
no workspace · no box · offline · 0s · 0 working · 0 waiting
 1 Settings
┌ Settings ────────────────────────────────────────────────────────────────────────────────────────┐
│ Agents  Hierarchy  Kinds  Prompt                                                                 │
│settings unavailable: store unreachable: this box browses its read-only cache and starts no run   │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│r reload                                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
